# babeltrace

./: .gitattributes  .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  configure.scan
.github/workflows/: codeql.yml
Xcode/: .gitignore
Xcode/babeltrace.xcodeproj/: project.pbxproj
bindings/: Makefile.am  Makefile.in
bindings/python/: Makefile.am  Makefile.in  babeltrace.py  babeltrace_wrap.c
bindings/python/examples/: babeltrace_and_lttng.py  ctf_writer.py  sched_switch.py  sequence_test.py
compat/: .gitignore  Makefile.am  Makefile.in  TODO  alloca.h  dummy.c  fallocate.c  fcntl.in.h  group-member.c  mktime.c  obstack.c  obstack.h  posix_fallocate.c  posix_fallocate64.c  pread.c  pwrite.c  unlinkat.c
config/: .gitattributes
converter/: Makefile.am  Makefile.in  babeltrace-log.c  babeltrace.c
doc/: Makefile.am  Makefile.in
extras/: Makefile.am  Makefile.in
extras/valgrind/: Makefile.am  Makefile.in
formats/: Makefile.am  Makefile.in
formats/bt-dummy/: Makefile.am  Makefile.in  bt-dummy.c
formats/ctf/: Makefile.am  Makefile.in  ctf.c  events.c  iterator.c
formats/ctf-metadata/: Makefile.am  Makefile.in  ctf-metadata.c
formats/ctf-text/: Makefile.am  Makefile.in
formats/ctf-text/types/: Makefile.am  Makefile.in
formats/ctf/ir/: Makefile.am  Makefile.in  event-types.c  stream-class.c
formats/ctf/metadata/: Makefile.am  Makefile.in  ctf-parser.y  ctf-visitor-generate-io-struct.c  objstack.c
formats/ctf/types/: Makefile.am  Makefile.in  float.c  sequence.c  string.c
formats/ctf/writer/: Makefile.am  Makefile.in
formats/lttng-live/: Makefile.am  Makefile.in  lttng-live-comm.c
include/: Makefile.am  Makefile.in
include/babeltrace/: clock-internal.h  endian.h  mmap-align.h  prio_heap.h  types.h
include/babeltrace/compat/: memstream.h
include/babeltrace/ctf/: events.h  types.h
lib/: Makefile.am  Makefile.in
lib/prio_heap/: Makefile.am  Makefile.in  prio_heap.c
m4/: codeset.m4  euidaccess.m4  faccessat.m4  fallocate.m4  fcntl_h.m4  ftruncate.m4  getdelim.m4  getline.m4  glib-2.0.m4  gnulib-common.m4  group-member.m4  lstat.m4  malloc.m4  manywarnings.m4  memrchr.m4  openat.m4  posix_fallocate.m4  posix_fallocate64.m4  pread.m4  pwrite.m4  strndup.m4  strnlen.m4  unistd_h.m4  unlink.m4  unlinkat.m4  xorg-macros.m4  xorg-tls.m4
po/: .gitignore  ChangeLog  Makevars  Makevars.in
tests/: Makefile.am  Makefile.in  run.sh  tests
tests/lib/: Makefile.am  Makefile.in  common.c  common.h  nocrash.c  nocrash.h  test_bitfield.c  test_ctf_writer.c  test_seek.c
tests/utils/: Makefile.am  Makefile.in
tests/utils/tap/: Makefile.am  Makefile.in
types/: Makefile.am  Makefile.in
